--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,12 @@
     margin: 0;
     padding 0;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    box-sizing: border-box;
 }
 .head{
     margin:0;
     padding: 0;
-    font-size: 50px;
+    font-size: 30px;
     font-style: oblique;
 }
 .introduction{
